--- a/frontend/static/frontend/styles.css
+++ b/frontend/static/frontend/styles.css
@@ -38,3 +38,23 @@
   .text-small{
     font-size: 20px;
   }
+
+  .btn-black{
+    background: transparent;
+    text-transform: capitalize;
+    font-size: 0.8rem !important;
+    color: var(--mainDark) !important;
+    border-radius: 0 !important;
+    border: 0.1rem solid var(--mainDark) !important;
+  }
+
+  .btn-black:hover{
+    background: var(--mainDark) !important;
+    color: var(--mainWhite) !important;
+  }
+
+  .cart-icon{
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: var(--lightGreen)
+  }
